Add win and loss condistions for RPS

--- a/index.html
+++ b/index.html
@@ -16,9 +16,30 @@
             const item = choices[randomChoice];
             return item;
         }    
-        
-        let result = getComputerChoice(array);
-        console.log(result);
+
+        const result = getComputerChoice(array);
+
+        function playRound(playerSelection, computerSelection) {
+            if(playerSelection === computerSelection) {
+                return ("You tied!");
+            }else if (playerSelection === "Rock" && computerSelection === "Paper") {
+                return ("You lose! Paper beats Rock")
+            }else if (playerSelection === "Rock" && computerSelection === "Scissors") {
+                return ("You win! Rock beats Scissors")
+            }else if (playerSelection === "Paper" && computerSelection === "Rock") {
+                return ("You win! Paper beats Rock")
+            }else if (playerSelection === "Paper" && computerSelection === "Scissors") {
+                return ("You lose! Scissors beats Paper")
+            }else if (playerSelection === "Scissors" && computerSelection === "Rock") {
+                return ("You lose! Rock beats Scissors")
+            }else if (playerSelection === "Scissors" && computerSelection === "Paper") {
+                return ("You win! Scissors beats Paper")
+            }
+        }
+        const playerSelection = "rock";
+        const playerSelection2 = playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1);
+        const computerSelection = getComputerChoice(array);
+        console.log(playRound(playerSelection2, computerSelection));
           
     </script>
 </body>
