--- a/index.html
+++ b/index.html
@@ -17,29 +17,25 @@
             return item;
         }    
 
-        const result = getComputerChoice(array);
-
         function playRound(playerSelection, computerSelection) {
             if(playerSelection === computerSelection) {
                 return ("You tied!");
-            }else if (playerSelection === "Rock" && computerSelection === "Paper") {
-                return ("You lose! Paper beats Rock")
-            }else if (playerSelection === "Rock" && computerSelection === "Scissors") {
-                return ("You win! Rock beats Scissors")
-            }else if (playerSelection === "Paper" && computerSelection === "Rock") {
-                return ("You win! Paper beats Rock")
-            }else if (playerSelection === "Paper" && computerSelection === "Scissors") {
-                return ("You lose! Scissors beats Paper")
-            }else if (playerSelection === "Scissors" && computerSelection === "Rock") {
-                return ("You lose! Rock beats Scissors")
-            }else if (playerSelection === "Scissors" && computerSelection === "Paper") {
-                return ("You win! Scissors beats Paper")
+            }else if (playerSelection === "Rock" && computerSelection === "Paper" || playerSelection === "Paper" && computerSelection === "Scissors" || playerSelection === "Scissors" && computerSelection === "Rock") {
+                return ("You lose! " + computerSelection + " beats " + playerSelection);
+            }else if (playerSelection === "Rock" && computerSelection === "Scissors" || playerSelection === "Paper" && computerSelection === "Rock"|| playerSelection === "Scissors" && computerSelection === "Paper") {
+                return ("You win!" + playerSelection + " beats " + computerSelection);
             }
         }
         const playerSelection = "rock";
         const playerSelection2 = playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1);
         const computerSelection = getComputerChoice(array);
         console.log(playRound(playerSelection2, computerSelection));
+
+        function game() {
+            for (let i = 0; i < 5; i++){
+
+            }
+        }
           
     </script>
 </body>
