Fix game function and playRound function

--- a/index.html
+++ b/index.html
@@ -22,22 +22,26 @@
             if(playerSelection === computerSelection) {
                 return ("You tied!");
             }else if (playerSelection === "Rock" && computerSelection === "Paper" || playerSelection === "Paper" && computerSelection === "Scissors" || playerSelection === "Scissors" && computerSelection === "Rock") {
-                playerPoints +=1;
+                computerPoints +=1;
                 return ("You lose! " + computerSelection + " beats " + playerSelection);
             }else if (playerSelection === "Rock" && computerSelection === "Scissors" || playerSelection === "Paper" && computerSelection === "Rock"|| playerSelection === "Scissors" && computerSelection === "Paper") {
-                computerPoints +=1;
+                playerPoints +=1;
                 return ("You win! " + playerSelection + " beats " + computerSelection);
             }
         }
 
         function game() {
             for (let i = 1; playerPoints <= 5 && computerPoints <= 5; i++){
-                playRound (playerSelection2, computerSelection);
-                return("You currently have " + playerPoints + ".The computer has " + computerPoints + ".")
+                console.log(playRound (playerSelection2, computerSelection));
+                return("You currently have " + playerPoints + ". The computer has " + computerPoints + ".")
                 }
             }
-        console.log(game());
         
+        let playerSelection = prompt("Choose rock, paper, or scissors.")
+        const playerSelection2 = playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1);
+        const computerSelection = getComputerChoice(array);
+        console.log(game(playerSelection2, computerSelection));
+
     </script>
 </body>
 </html>
