--- a/index.html
+++ b/index.html
@@ -18,26 +18,30 @@
             const item = choices[randomChoice];
             return item;
         }    
+
+        let playerSelection = prompt("Choose rock, paper, or scissors.");
+
         function playRound(playerSelection, computerSelection) {
             if(playerSelection === computerSelection) {
                 return ("You tied!");
             }else if (playerSelection === "Rock" && computerSelection === "Paper" || playerSelection === "Paper" && computerSelection === "Scissors" || playerSelection === "Scissors" && computerSelection === "Rock") {
-                computerPoints +=1;
+                computerPoints ++;
                 return ("You lose! " + computerSelection + " beats " + playerSelection);
             }else if (playerSelection === "Rock" && computerSelection === "Scissors" || playerSelection === "Paper" && computerSelection === "Rock"|| playerSelection === "Scissors" && computerSelection === "Paper") {
-                playerPoints +=1;
+                playerPoints ++;
                 return ("You win! " + playerSelection + " beats " + computerSelection);
             }
         }
 
         function game() {
-            for (let i = 1; playerPoints <= 5 && computerPoints <= 5; i++){
+            for (let i = 0; playerPoints <= 5 && computerPoints <= 5; i++){
                 console.log(playRound (playerSelection2, computerSelection));
-                return("You currently have " + playerPoints + ". The computer has " + computerPoints + ".")
+                console.log("You currently have " + playerPoints + " point(s). The computer has " + computerPoints + " point(s).");
+                return game(playerSelection = prompt("Choose rock, paper, or scissors."));
                 }
             }
         
-        let playerSelection = prompt("Choose rock, paper, or scissors.")
+
         const playerSelection2 = playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1);
         const computerSelection = getComputerChoice(array);
         console.log(game(playerSelection2, computerSelection));
