Computer is not choosing randomly

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <script>
         let playerPoints = 0;
         let computerPoints = 0;
-        const array = ["Rock", "Paper", "Scissors"];
+        const array = ["rock", "paper", "scissors"];
 
-        function getComputerChoice(choices){
-            const randomChoice = Math.floor(Math.random() * choices.length);
-            const item = choices[randomChoice];
-            return item;
+        function getComputerChoice(){
+            const randomChoice = Math.floor(Math.random() * array.length);
+            return array[randomChoice];
         }    
 
-        let playerSelection = prompt("Choose rock, paper, or scissors.");
+        let playerSelection = prompt("Choose rock, paper, or scissors.", ''.toLowerCase());
+        const computerSelection = getComputerChoice(array);
 
         function playRound(playerSelection, computerSelection) {
             if(playerSelection === computerSelection) {
                 return ("You tied!");
-            }else if (playerSelection === "Rock" && computerSelection === "Paper" || playerSelection === "Paper" && computerSelection === "Scissors" || playerSelection === "Scissors" && computerSelection === "Rock") {
+            }else if ((playerSelection === "rock" && computerSelection === "paper") || (playerSelection === "paper" && computerSelection === "scissors") || (playerSelection === "scissors" && computerSelection === "rock")) {
                 computerPoints ++;
                 return ("You lose! " + computerSelection + " beats " + playerSelection);
-            }else if (playerSelection === "Rock" && computerSelection === "Scissors" || playerSelection === "Paper" && computerSelection === "Rock"|| playerSelection === "Scissors" && computerSelection === "Paper") {
+            }else if ((playerSelection === "rock" && computerSelection === "scissors") || (playerSelection === "paper" && computerSelection === "rock") || (playerSelection === "scissors" && computerSelection === "paper")) {
                 playerPoints ++;
                 return ("You win! " + playerSelection + " beats " + computerSelection);
             }
@@ -35,16 +35,15 @@
 
         function game() {
             for (let i = 0; playerPoints <= 5 && computerPoints <= 5; i++){
-                console.log(playRound (playerSelection2, computerSelection));
+                console.log(playRound (playerSelection, computerSelection));
                 console.log("You currently have " + playerPoints + " point(s). The computer has " + computerPoints + " point(s).");
                 return game(playerSelection = prompt("Choose rock, paper, or scissors."));
                 }
             }
-        
 
-        const playerSelection2 = playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1);
-        const computerSelection = getComputerChoice(array);
-        console.log(game(playerSelection2, computerSelection));
+        console.log(game(playerSelection, computerSelection));
+
+
 
     </script>
 </body>
