Move congrats or lose message into game function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         function playRound() {
             let playerSelection = prompt("Choose rock, paper, or scissors.", ''.toLowerCase());
             let computerSelection = getComputerChoice();
-
             if(playerSelection === computerSelection) {
                 return ("You tied!");
             }else if ((playerSelection === "rock" && computerSelection === "paper") || (playerSelection === "paper" && computerSelection === "scissors") || (playerSelection === "scissors" && computerSelection === "rock")) {
@@ -30,21 +29,22 @@
             }else if ((playerSelection === "rock" && computerSelection === "scissors") || (playerSelection === "paper" && computerSelection === "rock") || (playerSelection === "scissors" && computerSelection === "paper")) {
                 playerPoints ++;
                 return ("You win! " + playerSelection + " beats " + computerSelection);
-            }else if (playerPoints === 5){
-                return ("Congrats! You won 5 games.")
-            }else if (computerPoints === 5){
-                return ("Sorry you lost!")
             }else{
-                return ("Please type rock, paper, or scissors.")
+                return ("Please type rock, paper, or scissors.");
             }
         }
 
         function game() {
-            for (let i = 0; playerPoints <= 5 && computerPoints <= 5; i++){
-                console.log(playRound ());
+            for (let i = 0; playerPoints < 5 && computerPoints < 5; i++){
+                console.log(playRound());
                 console.log("You currently have " + playerPoints + " point(s). The computer has " + computerPoints + " point(s).");
                 }
+                if(playerPoints === 5){
+                    return ("Congrats! You beat the computer!")
+                }else if(computerPoints ===5){
+                    return ("Sorry you lose!")
             }
+        }
 
         console.log(game());
 
