--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
             let computerSelection = getComputerChoice();
             if(playerSelection === computerSelection) {
                 return ("You tied!");
-            }else if ((playerSelection === "rock" && computerSelection === "paper") || (playerSelection === "paper" && computerSelection === "scissors") || (playerSelection === "scissors" && computerSelection === "rock")) {
-                computerPoints ++;
-                return ("You lose! " + computerSelection + " beats " + playerSelection);
-            }else if ((playerSelection === "rock" && computerSelection === "scissors") || (playerSelection === "paper" && computerSelection === "rock") || (playerSelection === "scissors" && computerSelection === "paper")) {
-                playerPoints ++;
-                return ("You win! " + playerSelection + " beats " + computerSelection);
+            }else if ((playerSelection === "rock" && computerSelection === "paper") || 
+                (playerSelection === "paper" && computerSelection === "scissors") || 
+                (playerSelection === "scissors" && computerSelection === "rock")) {
+                    computerPoints ++;
+                    return ("You lose! " + computerSelection + " beats " + playerSelection);
+            }else if ((playerSelection === "rock" && computerSelection === "scissors") || 
+                (playerSelection === "paper" && computerSelection === "rock") || 
+                (playerSelection === "scissors" && computerSelection === "paper")) {
+                    playerPoints ++;
+                    return ("You win! " + playerSelection + " beats " + computerSelection);
             }else{
                 return ("Please type rock, paper, or scissors.");
             }
