Add play again button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class = "header">Rock Paper Scissors Game!</div>
+    <div class = "subheader">First to five wins.</div>
     <div id="buttons">
         <button id="Rock">Rock</button>
         <button id="Paper">Paper</button>
@@ -19,6 +21,8 @@
         <div class = "scoreboard-text">Computer score: <span id = "computer-score"></span></div>
     </div>
     <div id ="result"></div>
+    <div id ="reset-game"></div>
+    </div>
     <script>
         
     </script>
